<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D0D0D"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAddPhrases"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/home_buttons"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="@string/btnAddPhrase"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/btnDisplayPhrases"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/home_buttons"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="@string/btnDisplayPhrases"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <Button
        android:id="@+id/btnEditPhrase"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/home_buttons"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="@string/btnEditPhrase"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnLanguageSub"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/home_buttons"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="@string/btnLanguageSub"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.654" />

    <Button
        android:id="@+id/btnTranslate"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/home_buttons"
        android:elevation="@dimen/cardview_default_elevation"
        android:text="@string/btnTranslate"
        android:textColor="#ffffff"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821" />
</androidx.constraintlayout.widget.ConstraintLayout>