<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#0D0D0D"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/translateLlanguageList"
        android:layout_width="match_parent"
        android:layout_height="352dp" >

    </ListView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:outlineSpotShadowColor="#ffffff"
        android:outlineAmbientShadowColor="#ffffff"
        android:layout_marginTop="10dp">


        <EditText
            android:id="@+id/translatedLanguage"
            android:paddingTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="354dp"
            android:layout_height="39dp"
            android:hint="@string/translatedLanguage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.719"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:backgroundTint="#ffffff"
            android:textSize="16dp"
            android:textStyle="italic"
            android:inputType="none"
            app:layout_constraintVertical_bias="0.102" />


        <Button
            android:id="@+id/btnTranslateSelectedPhrase"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/home_buttons"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="@string/btnTranslateSelectedPhrase"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.869" />

        <Spinner
            android:id="@+id/spinnerSubLangList"
            android:layout_width="353dp"
            android:layout_height="29dp"
            android:autofillHints="@string/spinnerSubLangListHint"
            android:hapticFeedbackEnabled="true"
            android:backgroundTintMode="add"
            android:outlineSpotShadowColor="@color/Blue"
            android:maxHeight="20dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:verticalScrollbarPosition="left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.659" />

        <Button
            android:id="@+id/btnPronounce"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/home_buttons"
            android:elevation="@dimen/cardview_default_elevation"
            android:text="@string/btnPronounce"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnTranslateSelectedPhrase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.402" />

        <ProgressBar
            android:id="@+id/translationLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.077"
            android:progressTint="#82e9de"
            android:progressBackgroundTint="#82e9de"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>